--- a/transcosmos/index.html
+++ b/transcosmos/index.html
@@ -13,7 +13,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Explore Page</title>
+    <title>Enver | Home</title>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav m-md-auto">
                         <li class="nav-item ms-md-3">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ms-md-3">
                             <a class="nav-link" href="">Services</a>
